# sgfx

./: Cargo.toml  README.md
examples/: boids.rs
shaders/: compute.wgsl  demo.wgsl
src/: lib.rs
