[package]
name = "sgfx"
version = "0.1.0"
edition = "2021"

[[example]]
name = "shapes"
path = "examples/shapes.rs"

[[example]]
name = "boids"
path = "examples/boids.rs"

[[example]]
name = "basic"
path = "examples/basic.rs"

[dependencies]
anyhow = "1.0.71"
bytemuck = "1.13.1"
log = "0.4.19"
wgpu = "0.16.1"
winit = "0.28.6"

[dev-dependencies]
nanorand = "0.7.0"
pretty_env_logger = "0.5.0"
wgpu_text = "0.8.1"

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.7"
